added favoret movies

--- a/class2.html
+++ b/class2.html
@@ -6,6 +6,11 @@
 
 <body>
   <h1>Hello World</h1>
-</body>
+    <ul>
+     <li>The Terminal</li>
+     <li>Titanic</li>
+     <li>The Matrix</li> 
+    </ul>
+  </body>
 
 </html>
